--- a/src/components/button-group/style/mixin.less
+++ b/src/components/button-group/style/mixin.less
@@ -1,263 +1,161 @@
-// mixins for button
-// ------------------------
-.button-size(@padding; @font-size; @border-radius) {
-  padding: @padding;
-  font-size: @font-size;
-  border-radius: @border-radius;
-}
+@import "../../../style/mixins/index";
 
-.button-variant(@color; @background; @border) {
-  .button-color(@color; @background; @border);
+.antCheckboxFn(@checkbox-prefix-cls: ~"@{ant-prefix}-checkbox") {
+  @checkbox-inner-prefix-cls: ~"@{checkbox-prefix-cls}-inner";
+  // 一般状态
+  .@{checkbox-prefix-cls} {
+    white-space: nowrap;
+    cursor: pointer;
+    outline: none;
+    display: inline-block;
+    line-height: 1;
+    position: relative;
+    vertical-align: middle;
 
-  &:hover,
-  &:focus {
-    .button-color(tint(@color, 20%); tint(@background, 20%); tint(@border, 20%));
-  }
-  &:active,
-  &.active {
-    .button-color(shade(@color, 5%); shade(@background, 5%); shade(@background, 5%));
-  }
-
-  &.disabled,
-  &[disabled],
-  fieldset[disabled] & {
-    &,
+    .@{checkbox-prefix-cls}-wrapper:hover &,
     &:hover,
-    &:focus,
-    &:active,
-    &.active {
-      .button-color(@btn-disable-color; @btn-disable-bg; @btn-disable-border);
+    &-focused {
+      .@{checkbox-inner-prefix-cls} {
+        border-color: @primary-color;
+      }
     }
-  }
-}
 
-.button-color(@color; @background; @border) {
-  color: @color;
-  background-color: @background;
-  border-color: @border;
-  // a inside Button which only work in Chrome
-  // http://stackoverflow.com/a/17253457
-  > a:only-child {
-    color: currentColor;
-    &:after {
-      content: '';
-      position: absolute;
+    &-inner {
+      position: relative;
       top: 0;
       left: 0;
+      display: inline-block;
+      width: 14px;
+      height: 14px;
+      border: 1px solid @border-color-base;
+      border-radius: 3px;
+      background-color: #fff;
+      transition: all .3s;
+
+      &:after {
+        transform: rotate(45deg) scale(0);
+        position: absolute;
+        left: 4px;
+        top: 1px;
+        display: table;
+        width: 5px;
+        height: 8px;
+        border: 2px solid #fff;
+        border-top: 0;
+        border-left: 0;
+        content: ' ';
+        transition: all .1s @ease-in-back;
+      }
+    }
+
+    &-input {
+      position: absolute;
+      left: 0;
+      z-index: 1;
+      cursor: pointer;
+      .opacity(0);
+      top: 0;
       bottom: 0;
       right: 0;
-      background: transparent;
-    }
-  }
-}
-
-.button-group-base(@btnClassName) {
-  position: relative;
-  display: inline-block;
-  vertical-align: middle;
-  > .@{btnClassName} {
-    position: relative;
-    float: left;
-    &:hover,
-    &:focus,
-    &:active,
-    &.active {
-      z-index: 2;
+      width: 100%;
+      height: 100%;
     }
   }
 
-  // size
-  &-lg > .@{btnClassName} {
-    .button-size(@btn-padding-lg; @btn-font-size-lg; @border-radius-base);
+  // 半选状态
+  .@{checkbox-prefix-cls}-indeterminate .@{checkbox-inner-prefix-cls}:after {
+    content: ' ';
+    transform: scale(1);
+    position: absolute;
+    left: 2px;
+    top: 5px;
+    width: 8px;
+    height: 1px;
   }
 
-  &-sm > .@{btnClassName} {
-    .button-size(@btn-padding-sm; @font-size-base; @border-radius-sm);
-    > .@{iconfont-css-prefix} {
-      font-size: @font-size-base;
-    }
-  }
-}
-
-// Base styles of buttons
-// --------------------------------------------------
-.btn() {
-  display: inline-block;
-  margin-bottom: 0;
-  font-weight: @btn-font-weight;
-  text-align: center;
-  vertical-align: middle;
-  touch-action: manipulation;
-  cursor: pointer;
-  background-image: none;
-  border: 1px solid transparent;
-  // outline: none;
-  white-space: nowrap;
-  line-height: @line-height-base;
-  .button-size(@btn-padding-base; @font-size-base; @border-radius-base);
-  user-select: none;
-  transition: all .3s @ease-in-out;
-  transform: translate3d(0, 0, 0);
-
-  > .@{iconfont-css-prefix} {
-    line-height: 1;
+  // 选中状态
+  .@{checkbox-prefix-cls}-checked .@{checkbox-inner-prefix-cls}:after {
+    transform: rotate(45deg) scale(1);
+    position: absolute;
+    left: 4px;
+    top: 1px;
+    display: table;
+    width: 5px;
+    height: 8px;
+    border: 2px solid #fff;
+    border-top: 0;
+    border-left: 0;
+    content: ' ';
+    transition: all .2s @ease-out-back .1s;
   }
 
-  &,
-  &:active,
-  &:focus {
-    outline: 0;
-  }
-
-  &:not([disabled]):hover {
-    text-decoration: none;
-  }
-
-  &:not([disabled]):active {
-    outline: 0;
-    transition: none;
-  }
-
-  &.disabled,
-  &[disabled] {
-    cursor: @cursor-disabled;
-    > * {
-      pointer-events: none;
+  .@{checkbox-prefix-cls}-checked,
+  .@{checkbox-prefix-cls}-indeterminate {
+    .@{checkbox-inner-prefix-cls} {
+      background-color: @primary-color;
+      border-color: @primary-color;
     }
   }
 
-  &-lg {
-    .button-size(@btn-padding-lg; @btn-font-size-lg; @border-radius-base);
+  .@{checkbox-prefix-cls}-disabled {
+    &.@{checkbox-prefix-cls}-checked {
+      .@{checkbox-inner-prefix-cls}:after {
+        animation-name: none;
+        border-color: @disabled-color;
+      }
+    }
+
+    .@{checkbox-inner-prefix-cls} {
+      border-color: @border-color-base!important;
+      background-color: #f3f3f3;
+      &:after {
+        animation-name: none;
+        border-color: #f3f3f3;
+      }
+    }
+
+    & + span {
+      color: @disabled-color;
+      cursor: not-allowed;
+    }
   }
 
-  &-sm {
-    .button-size(@btn-padding-sm; @font-size-base; @border-radius-sm);
-  }
-}
-
-// primary button style
-.btn-primary() {
-  .button-variant(@btn-primary-color; @btn-primary-bg; @primary-color);
-
-  &:hover,
-  &:focus,
-  &:active,
-  &.active {
-    color: @btn-primary-color;
-  }
-}
-
-// default button style
-.btn-default() {
-  .button-variant(@btn-default-color; @btn-default-bg; @btn-default-border);
-
-  &:hover,
-  &:focus {
-    .button-color(tint(@primary-color, 20%); white; tint(@primary-color, 20%));
-  }
-  &:active,
-  &.active {
-    .button-color(shade(@primary-color, 5%); white; shade(@primary-color, 5%));
-  }
-}
-
-// ghost button style
-.btn-ghost() {
-  .button-variant(@btn-ghost-color, @btn-ghost-bg, @btn-ghost-border);
-
-  &:hover,
-  &:focus {
-    .button-color(tint(@primary-color, 20%); @btn-ghost-bg; tint(@primary-color, 20%));
-  }
-  &:active,
-  &.active {
-    .button-color(shade(@primary-color, 5%); @btn-ghost-bg; shade(@primary-color, 5%));
-  }
-}
-
-// ghost button style
-.btn-dashed() {
-  .button-variant(@btn-ghost-color, @btn-ghost-bg, @btn-ghost-border);
-  border-style: dashed;
-
-  &:hover,
-  &:focus {
-    .button-color(tint(@primary-color, 20%); @btn-ghost-bg; tint(@primary-color, 20%));
-  }
-  &:active,
-  &.active {
-    .button-color(shade(@primary-color, 5%); @btn-ghost-bg; shade(@primary-color, 5%));
-  }
-}
-
-// circle button: the content only contains icon
-.btn-circle(@btnClassName: btn) {
-  .square(@btn-circle-size);
-  .button-size(0; @font-size-base + 2; 50%);
-
-  &.@{btnClassName}-lg {
-    .square(@btn-circle-size-lg);
-    .button-size(0; @btn-font-size-lg + 2; 50%);
+  .@{checkbox-prefix-cls}-wrapper {
+    cursor: pointer;
+    font-size: @font-size-base;
+    display: inline-block;
+    &:not(:last-child) {
+      margin-right: 8px;
+    }
   }
 
-  &.@{btnClassName}-sm {
-    .square(@btn-circle-size-sm);
-    .button-size(0; @font-size-base; 50%);
-  }
-}
-
-// Horizontal button groups styl
-// --------------------------------------------------
-.btn-group(@btnClassName: btn) {
-  .button-group-base(@btnClassName);
-
-  .@{btnClassName} + .@{btnClassName},
-  .@{btnClassName} + &,
-  & + .@{btnClassName},
-  & + & {
-    margin-left: -1px;
-  }
-
-  .@{btnClassName}:not(:first-child):not(:last-child) {
-    border-radius: 0;
+  .@{checkbox-prefix-cls}-wrapper + span,
+  .@{checkbox-prefix-cls} + span {
     padding-left: 8px;
     padding-right: 8px;
   }
 
-  > .@{btnClassName}:first-child {
-    margin-left: 0;
-    &:not(:last-child) {
-      border-bottom-right-radius: 0;
-      border-top-right-radius: 0;
-      padding-right: 8px;
+  .@{checkbox-prefix-cls}-group {
+    font-size: @font-size-base;
+    &-item {
+      display: inline-block;
     }
   }
 
-  > .@{btnClassName}:last-child:not(:first-child) {
-    border-bottom-left-radius: 0;
-    border-top-left-radius: 0;
-    padding-left: 8px;
-  }
+  @ie8: \0screen;
 
-  & > & {
-    float: left;
-  }
-
-  & > &:not(:first-child):not(:last-child) > .@{btnClassName} {
-    border-radius: 0;
-  }
-
-  & > &:first-child:not(:last-child) {
-    > .@{btnClassName}:last-child {
-      border-bottom-right-radius: 0;
-      border-top-right-radius: 0;
-      padding-right: 8px;
+  // IE8 hack for https://github.com/ant-design/ant-design/issues/2148
+  @media @ie8 {
+    .@{checkbox-prefix-cls}-checked .@{checkbox-prefix-cls}-inner:before,
+    .@{checkbox-prefix-cls}-checked .@{checkbox-prefix-cls}-inner:after {
+      .iconfont-font("\e632");
+      font-weight: bold;
+      font-size: 8px;
+      border: 0;
+      color: #fff;
+      left: 2px;
+      top: 3px;
+      position: absolute;
     }
-  }
-
-  & > &:last-child:not(:first-child) > .@{btnClassName}:first-child {
-    border-bottom-left-radius: 0;
-    border-top-left-radius: 0;
-    padding-left: 8px;
   }
 }
